[package]
name = "macext"
version = "0.1.7"
edition = "2021"
description = "Crate for editing mac process memory and finding pid, base address, etc."
authors = ["Graham Fielding <grahamfielding08@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mangopanda455/macext"
documentation = "https://docs.rs/macext"
homepage = "https://github.com/mangopanda455/macext"
exclude = [".cargo_vcs_info.json", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mach2 = "0.4.2"
process-memory = "0.5.0"
sudo = "0.6.0"
sysinfo = "0.30.5"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
